changed taskman to use css modules

--- a/taskman/src/components/Form/FormStyle.module.scss
+++ b/taskman/src/components/Form/FormStyle.module.scss
@@ -1,4 +1,4 @@
-.new-task {
+.newTask {
   display:flex;
   flex-direction: column;
   grid-area: nova-tarefa;
@@ -7,7 +7,7 @@
   box-shadow: 2px 4px 4px #0000009F;
   padding: 12px;
 
-  .input-container {
+  .inputContainer {
     display: flex;
     flex-direction: column;
     width: 100%;
