--- a/taskman/src/components/List/ListStyle.module.scss
+++ b/taskman/src/components/List/ListStyle.module.scss
@@ -51,12 +51,12 @@
   }
 }
 
-.item-selected {
+.itemSelected {
   background-color: #292929;
   box-shadow: 2px 4px 4px #0000009F inset;
 }
 
-.item-done {
+.itemDone {
   background-color: #566F42;
   cursor: auto;
 
