--- a/taskman/src/components/Button/ButtonStyle.module.scss
+++ b/taskman/src/components/Button/ButtonStyle.module.scss
@@ -13,6 +13,12 @@
     background-color: #7CA6B7;
     box-shadow: 2px 2px 4px #0000009F inset;
   }
+
+  &:disabled {
+    background-color: lightgray;
+    color: slategray;
+    cursor: not-allowed;
+  }
 }
 
 @media screen and (min-width: 1280px) {
