--- a/hungryman/src/pages/Menu/Orderer/Orderer.module.scss
+++ b/hungryman/src/pages/Menu/Orderer/Orderer.module.scss
@@ -14,6 +14,7 @@
   min-width: 240px;
   padding: 0 40px;
   position: relative;
+  cursor: pointer;
   &--active {
     background-color: $blue;
     color: white;
@@ -27,6 +28,8 @@
     width: 100%;
     &--active {
       display: flex;
+      color: black;
+      background: #E4E4E4;
     }
   }
   &__option {
@@ -42,7 +45,6 @@
     &:hover,
     &--active {
       background-color: $blue;
-      cursor: pointer;
       color: white;
     }
   }
